# gomoku

./: #CMakeLists.txt#  .gitignore  CMakeCache.txt  CMakeLists.txt  Evolve.cbp  Makefile  cmake_install.cmake  gomoku.cbp  pbrain-gomoku  pbrain-gomoku.cbp  renju_prof
include/: API.hpp  CMakeLists.txt  IBrain.hpp  IOManager.hpp  Logger.hpp  controller.hpp  map.hpp
include/ai/: NGM.hpp  eval.hpp  manager.hpp  utils.hpp
include/brain/: ANeuron.hpp  DRAWS.hpp  DWRAON.hpp
include/other/: global.hpp
src/: IOManager.cpp  Logger.cpp  controller.cpp  main.cpp  map.cpp
src/API/: api.cpp
src/Brain/: DWRAON.cpp
src/ai/: NGM.cpp  eval.cpp  manager.cpp  utils.cpp
src/brain/: DRAWS.cpp
src/other/: global.cpp
test/: Makefile  log.txt  main.cpp  test
test/include/: IOManager.hpp
test/src/API/: api.cpp
